Proiect ArcGIS/GpMessages/402357996498800
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miercuri, 22 ianuarie 2025 07:21:57</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\Trandafir Irina\Desktop\Sisteme informatice geografice\Proiect\ProiectGIS\ProiectGIS.atbx\Script.tool\tool.script.execute.py", line 78
    arcpy.management.SelectLayerByAttribute("localitati","REMOVE_FROM_SELECTION", TIP = 5")
                                                                                         ^
﻿SyntaxError: unterminated string literal (detected at line 78)
</msg><msg code="0" type="0">Failed script Script...</msg><msg code="-2147467259" type="100">Failed to execute (Script).</msg><msg code="0" type="3">Failed at miercuri, 22 ianuarie 2025 07:21:57 (Elapsed Time: 0,36 seconds)</msg></messages>